# aoc2025

./: Cargo.toml
crates/aoc_common/: Cargo.toml
crates/aoc_common/src/: grid.rs  lib.rs
crates/day01/: Cargo.toml
crates/day01/src/: main.rs
crates/day02/: Cargo.toml
crates/day02/src/: main.rs
crates/day03/: Cargo.toml
crates/day03/src/: main.rs
crates/day04/: Cargo.toml
crates/day04/src/: main.rs
crates/day05/: Cargo.toml
crates/day05/src/: main.rs
crates/day06/: Cargo.toml
crates/day06/src/: main.rs
crates/day07/: Cargo.toml
crates/day07/src/: main.rs
crates/day08/: Cargo.toml
crates/day08/src/: main.rs
crates/day09/: Cargo.toml
crates/day09/src/: main.rs
crates/day10/: Cargo.toml
crates/day10/src/: main.rs
crates/day11/: Cargo.toml
crates/day12/: Cargo.toml
